Fixed images on mobile

--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -130,3 +130,14 @@
 
     h4
       margin-left: 60px
+
+  .thumb-container
+    label
+      width: 50%
+      float: none
+      margin: 0px auto
+
+      .thumb-unit
+        img
+          display: block
+          margin: 5px auto
